--- a/mystyles.scss
+++ b/mystyles.scss
@@ -8,8 +8,12 @@ $gray: #64605f;
 $light-gray: #949799;
 $purple: #AE8BD1;
 
+
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+$font-family-sans-serif: "Roboto",-apple-system,BlinkMacSystemFont,roboto,segoe ui,Helvetica,Arial,sans-serif;
+$font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono",monospace;
 $font-size-root: 1.06rem;
 $h1-font-size: 33px;
 $h1-font-weight: 500;
@@ -24,12 +28,13 @@ $body-color: $gray; // page text
 $footer-bg: $cream; // footer 
 $link-color: $purple; // hyperlinks 
 
+
 // Inline code
 $code-bg: $cream; // inline code background color
 $code-color: $purple; // inline code text color
 
 // Code blocks
-$code-block-bg-alpha: -.8; // code block background color
+$code-block-bg: $cream; // code block background color
 
 
 
