--- a/motina.css
+++ b/motina.css
@@ -5,7 +5,7 @@
   --font-header: "Fira Sans Condensed",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
   --font-mono:   SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono",monospace;
 
-  --color-background:   #EAE9EA;
+  --color-background:   #D1D9CE;
   --color-primary:      #74a08a;
   --color-primary-dark: #2F4238;
   --color-secondary:    #8a74a0;
@@ -68,7 +68,7 @@ a:hover, a:focus {
     color: #828282;
 }
 
-/* For floating images - see lab page, for example */
+/* For floating images */
 
 .float-left img {
     float:left;
